	g_win32_get_package_installation_directory_of_module().

	(g_win32_get_package_installation_directory)
	(g_win32_get_package_installation_subdirectory): Mention these
	functions will be deprecated and recommend using
	g_win32_get_package_installation_directory_of_module() instead.
	
	* glib/gwin32.h: Declare
	g_win32_get_package_installation_directory_of_module().

	* glib/glib.symbols: Add it.

2008-02-23  Matthias Clasen  <mclasen@redhat.com> 

	* NEWS: Updates

2008-02-23  Matthias Clasen  <mclasen@redhat.com> 

	* glib/gkeyfile.c (g_key_file_get_string_list): Return
	NULL when the key is not found.  (#513171, Дилян Палаузов)

2008-02-23  Matthias Clasen  <mclasen@redhat.com>

	* tests/testglib.c: Don't test user directories for being
	non-null.  (#517084, Yevgen Muntyan)

2008-02-22  Matthias Clasen  <mclasen@redhat.com>

	* glib/gasyncqueue.c:
	* glib/gtestutils.c: Documentation fixes

2008-02-21  Tor Lillqvist  <tml@novell.com>
	
	* glib/gutf8.c (g_get_charset)
	* glib/gconvert.c (g_locale_from_utf8): Clarify character set
	issues on Windows.

2008-02-20  Tor Lillqvist  <tml@novell.com>

	* glib/gtestutils.c (g_test_trap_fork) [Win32]: Change the
	g_error() to g_message() to avoid stopping on warnings. At least
	now testglib runs to completion and the old tests in it get
	exercised even if the newfangled ones don't.
	(g_test_trap_assertions) [Win32]: Bypass on Windows.

2008-02-17  Marco Barisione  <marco@barisione.org>

	* glib/gregex.c: (translate_compile_error), (g_regex_new): Avoid some
	useless casts from const gchar * to gchar *.  (#516597, patch by
	Yevgen Muntyan)

2008-02-17  Marco Barisione  <marco@barisione.org>

	* glib/gregex.c: (match_info_new), (g_match_info_next): Don't return
	duplicate matches when matching empty strings.  (#515944)
	* tests/regex-test.c: Add tests.

2008-02-17  Hans Breuer  <hans@breuer.org>

	* glib/gutils.c : define CSIDL_MYPICTURES if not available
	* gthread/gthread-win32.c : use G_STRFUNC instead of compiler 